fix(order_group): show tax total
